Projects/ControllerSDK/SDK_DLL/EventAttach/dhnetsdk.h

/////////////////////////////////日志相关/////////////////////////////////

// 日志查询类型
typedef enum _DH_LOG_QUERY_TYPE
{
	DHLOG_ALL = 0,								// 所有日志
	DHLOG_SYSTEM,								// 系统日志
	DHLOG_CONFIG,								// 配置日志
	DHLOG_STORAGE,								// 存储相关
	DHLOG_ALARM,								// 报警日志
	DHLOG_RECORD,								// 录象相关
	DHLOG_ACCOUNT,								// 帐号相关
	DHLOG_CLEAR,								// 清除日志
	DHLOG_PLAYBACK,								// 回放相关
	DHLOG_MANAGER                               // 前端管理运行相关
} DH_LOG_QUERY_TYPE;
typedef enum _EM_NET_RECORD_TYPE
{
	NET_RECORD_UNKNOWN,
	NET_RECORD_TRAFFICREDLIST,								// 交通白名单账户记录
	NET_RECORD_TRAFFICBLACKLIST,							// 交通黑名单账号记录
	NET_RECORD_BURN_CASE,									// 刻录案件记录

	NET_RECORD_ACCESSCTLCARD,							    // 门禁卡,对应NET_RECORDSET_ACCESS_CTL_CARD
	NET_RECORD_ACCESSCTLPWD,								// 门禁密码,对应NET_RECORDSET_ACCESS_CTL_PWD
	NET_RECORD_ACCESSCTLCARDREC,							// 门禁出入记录,对应NET_RECORDSET_ACCESS_CTL_CARDREC
	NET_RECORD_ACCESSCTLHOLIDAY,							// 假日记录集, 对应NET_RECORDSET_HOLIDAY
}EM_NET_RECORD_TYPE;
// 时间
typedef struct 
{
	DWORD				dwYear;					// 年
	DWORD				dwMonth;				// 月
	DWORD				dwDay;					// 日
	DWORD				dwHour;					// 时
	DWORD				dwMinute;				// 分
	DWORD				dwSecond;				// 秒
} NET_TIME,*LPNET_TIME;
// 日志信息里的时间定义
typedef struct _DHDEVTIME
{
	DWORD				second		:6;			// 秒	1-60		
	DWORD				minute		:6;			// 分	1-60		
	DWORD				hour		:5;			// 时	1-24		
	DWORD				day			:5;			// 日	1-31		
	DWORD				month		:4;			// 月	1-12		
	DWORD				year		:6;			// 年	2000-2063	
} DHDEVTIME, *LPDHDEVTIME;
//////////////////////////////////////////////////////////////////////////

// 记录集新增操作(insert)输入参数
typedef struct tagNET_CTRL_RECORDSET_IN
{
	DWORD	dwSize;
	EM_NET_RECORD_TYPE	emType;					// 记录集信息类型
	void*	pBuf;								// 记录集信息缓存，详见EM_NET_RECORD_TYPE注释
	int		nBufLen;							// 记录集信息缓存大小
}NET_CTRL_RECORDSET_INSERT_IN;
// 记录集新增操作(insert)输出参数
typedef struct tagNET_CTRL_RECORDSET_OUT 
{
	DWORD	dwSize;
    int		nRecNo;				                // 记录编号(新增insert时设备返回)
}NET_CTRL_RECORDSET_INSERT_OUT;
// 记录集新增操作(insert)参数
typedef struct tagNET_CTRL_RECORDSET_INSERT_PARAM 
{
	DWORD							dwSize;
	NET_CTRL_RECORDSET_INSERT_IN	stuCtrlRecordSetInfo;      // 记录集信息(用户填写)
    NET_CTRL_RECORDSET_INSERT_OUT	stuCtrlRecordSetResult;     // 记录集信息(设备返回)
}NET_CTRL_RECORDSET_INSERT_PARAM;
// 日志信息，对应接口CLIENT_QueryLog接口
typedef struct _DH_LOG_ITEM
{
    DHDEVTIME			time;					// 日期
    unsigned short		type;					// 类型
    unsigned char		reserved;				// 保留
    unsigned char		data;					// 数据
    unsigned char		context[8];				// 内容
} DH_LOG_ITEM, *LPDH_LOG_ITEM;
// 新日志信息结构，对应接口CLIENT_QueryDeviceLog接口
typedef struct _DH_DEVICE_LOG_ITEM_EX
{
	int					nLogType;				// 日志类型
	DHDEVTIME			stuOperateTime;			// 日期
	char				szOperator[16]; 		// 操作者
	BYTE				bReserved[3];
	BYTE				bUnionType;				//  union结构类型,0:szLogContext；1:stuOldLog。
	union
	{
		char			szLogContext[64];		// 日志备注信息
		struct 
		{
			DH_LOG_ITEM		stuLog;				// 旧的日志结构体
			BYTE			bReserved[48];		// 保留
		}stuOldLog;
	};
	char                szOperation[32];        // 具体的操作内容
	char				szDetailContext[4*1024];  // 详细日志信息描述
} DH_DEVICE_LOG_ITEM_EX, *LPDH_DEVICE_LOG_ITEM_EX;
typedef struct _QUERY_DEVICE_LOG_PARAM
{
	DH_LOG_QUERY_TYPE	emLogType;				// 查询日志类型
	NET_TIME			stuStartTime;			// 查询日志的开始时间
	NET_TIME			stuEndTime;				// 查询日志的结束时间
	int					nStartNum;				// 在时间段中从第几条日志开始查询，开始第一次查询可设为0
	int					nEndNum;				// 一次查询中到第几条日志结束,日志返回条数的最大值为1024
	BYTE                nLogStuType;            // 日志数据结构体类型,0:表示DH_DEVICE_LOG_ITEM；1:表示DH_DEVICE_LOG_ITEM_EX
	BYTE                reserved[3];            // 保留 对齐
	unsigned int        nChannelID;             // 通道号,0:兼容之前表示所有通道号，所以通道号从1开始; 1:第一个通道
	BYTE				bReserved[40];
} QUERY_DEVICE_LOG_PARAM;
///////////////////////////////配置相关定义///////////////////////////////

//-------------------------------设备属性---------------------------------
// 设备信息
typedef struct
{
	BYTE				sSerialNumber[DH_SERIALNO_LEN];	// 序列号
	BYTE				byAlarmInPortNum;		// DVR报警输入个数
	BYTE				byAlarmOutPortNum;		// DVR报警输出个数
	BYTE				byDiskNum;				// DVR硬盘个数
	BYTE				byDVRType;				// DVR类型, 见枚举NET_DEVICE_TYPE
	BYTE				byChanNum;				// DVR通道个数
} NET_DEVICEINFO, *LPNET_DEVICEINFO;
// 设备软件版本信息，对应CLIENT_QueryDevState接口
typedef struct  
{
	char				szDevSerialNo[DH_DEV_SERIALNO_LEN];	// 序列号
	char				byDevType;				// 设备类型，见枚举NET_DEVICE_TYPE
	char				szDevType[DH_DEV_TYPE_LEN];	// 设备详细型号，字符串格式，可能为空
	int					nProtocalVer;			// 协议版本号
	char				szSoftWareVersion[DH_MAX_URL_LEN];
	DWORD				dwSoftwareBuildDate;
	char				szPeripheralSoftwareVersion[DH_MAX_URL_LEN];	// 从片版本信息，字符串格式，可能为空
	DWORD				dwPeripheralSoftwareBuildDate;
	char				szGeographySoftwareVersion[DH_MAX_URL_LEN];		// 地理信息定位芯片版本信息，字符串格式，可能为空
	DWORD				dwGeographySoftwareBuildDate;
	char				szHardwareVersion[DH_MAX_URL_LEN];
	DWORD				dwHardwareDate;
	char				szWebVersion[DH_MAX_URL_LEN];
	DWORD				dwWebBuildDate;
	char				reserved[256];
} DHDEV_VERSION_INFO;
// 网络接口，最大支持DH_MAX_NETINTERFACE_NUM个网卡
typedef struct tagDHDEV_NETINTERFACE_INFO
{
	int             dwSize;
	BOOL			bValid;								// 是否有效
	BOOL			bVirtual;							// 是否虚拟网卡
	int             nSpeed;								// 网卡理论速度(Mbps)
	int             nDHCPState;							// 0-未使能, 1-正在获取, 2-获取成功
	char			szName[DH_NETINTERFACE_NAME_LEN];	// 网口名称
	char			szType[DH_NETINTERFACE_TYPE_LEN];	// 网络类型
	char			szMAC[DH_MACADDR_LEN];			    // MAC地址
	char			szSSID[DH_MAX_SSID_LEN];			// SSID, 只对无线网络有效(szType == "Wireless")
	char            szConnStatus[DH_MAX_CONNECT_STATUS_LEN]; // Wifi、3G的连接状态，"Inexistence" : 网络不存在 "Down"：关闭 "Disconn"：未连接 "Connecting"：正连接 "Connected"： 已连接
	int             nSupportedModeNum;                  // 实际3G支持的网络模式个数
	char            szSupportedModes[DH_MAX_MODE_NUM][DH_MAX_MODE_LEN];// 3G支持的网络模式	"TD-SCDMA", "WCDMA", "CDMA1x", "EDGE", "EVDO"
} DHDEV_NETINTERFACE_INFO;
/***********************************************************************
 ** 回调函数定义
 ***********************************************************************/

// 网络连接断开回调函数原形
typedef void (CALLBACK *fDisConnect)(LLONG lLoginID, char *pchDVRIP, LONG nDVRPort, LDWORD dwUser);
/************************************************************************
 ** 接口定义
 ***********************************************************************/

// SDK初始化
CLIENT_API BOOL CALL_METHOD CLIENT_Init(fDisConnect cbDisConnect, LDWORD dwUser);
// SDK退出清理
CLIENT_API void CALL_METHOD CLIENT_Cleanup();
//------------------------------------------------------------------------

// 向设备注册
CLIENT_API LLONG CALL_METHOD CLIENT_Login(char *pchDVRIP, WORD wDVRPort, char *pchUserName, char *pchPassword, LPNET_DEVICEINFO lpDeviceInfo, int *error = 0);
// 查询设备日志，以分页方式查询
CLIENT_API BOOL CALL_METHOD CLIENT_QueryDeviceLog(LLONG lLoginID, QUERY_DEVICE_LOG_PARAM *pQueryParam, char *pLogBuffer, int nLogBufferLen, int *pRecLogNum, int waittime=3000);
// 查询设备状态
CLIENT_API BOOL CALL_METHOD CLIENT_QueryDevState(LLONG lLoginID, int nType, char *pBuf, int nBufLen, int *pRetLen, int waittime=1000);
// 新系统能力查询接口，查询系统能力信息(以Json格式，具体见配置SDK)
CLIENT_API BOOL CALL_METHOD CLIENT_QueryNewSystemInfo(LLONG lLoginID, char* szCommand, int nChannelID, char* szOutBuffer, DWORD dwOutBufferSize, int *error, int waittime=1000);
// 新配置接口，查询配置信息(以Json格式，具体见配置SDK)
CLIENT_API BOOL CALL_METHOD CLIENT_GetNewDevConfig(LLONG lLoginID, char* szCommand, int nChannelID, char* szOutBuffer, DWORD dwOutBufferSize, int *error, int waittime=500);
// 新配置接口，设置配置信息(以Json格式，具体见配置SDK)
CLIENT_API BOOL CALL_METHOD CLIENT_SetNewDevConfig(LLONG lLoginID, char* szCommand, int nChannelID, char* szInBuffer, DWORD dwInBufferSize, int *error, int *restart, int waittime=500);
// 查询设备当前时间
CLIENT_API BOOL CALL_METHOD CLIENT_QueryDeviceTime(LLONG lLoginID, LPNET_TIME pDeviceTime, int waittime=1000);
// 设置设备当前时间
CLIENT_API BOOL CALL_METHOD CLIENT_SetupDeviceTime(LLONG lLoginID, LPNET_TIME pDeviceTime);