Projects/ChinaController/Redistributables_1/dhconfigsdk.h

typedef struct tagCFG_TIME
{
	DWORD				dwHour;					// 时
	DWORD				dwMinute;				// 分
	DWORD				dwSecond;				// 秒
}CFG_TIME;
typedef struct tagCFG_TIME_PERIOD
{
	CFG_TIME	stuStartTime;				
	CFG_TIME	stuEndTime;			
}CFG_TIME_PERIOD;
// 网络接口
typedef struct tagCFG_NETWORK_INTERFACE 
{
	char				szName[MAX_NAME_LEN];			// 网络接口名称
	char				szIP[MAX_ADDRESS_LEN];			// ip地址
	char				szSubnetMask[MAX_ADDRESS_LEN];	// 子网掩码
	char				szDefGateway[MAX_ADDRESS_LEN];	// 默认网关
	BOOL				bDhcpEnable;					// 是否开启DHCP
	BOOL				bDnsAutoGet;					// DNS获取方式，dhcp使能时可以设置为true，支持通过dhcp获取
	char				szDnsServers[MAX_DNS_SERVER_NUM][MAX_ADDRESS_LEN];	// DNS服务器地址
	int					nMTU;							// 网络最大传输单元
} CFG_NETWORK_INTERFACE;
// 网络接口配置
typedef struct tagCFG_NETWORK_INFO 
{
	char				szHostName[MAX_NAME_LEN];		// 主机名称
	char				szDomain[MAX_NAME_LEN];			// 所属域
	char				szDefInterface[MAX_NAME_LEN];	// 默认使用的网卡
	int					nInterfaceNum;					// 网卡数量
	CFG_NETWORK_INTERFACE	stuInterfaces[MAX_NETWORK_INTERFACE_NUM];	// 网卡列表
} CFG_NETWORK_INFO;
//////////////////////////////////////////////////////////////////////////
// 门禁基本配置

// 自定义开门方式
typedef enum tagCFG_DOOR_OPEN_METHOD
{
	CFG_DOOR_OPEN_METHOD_UNKNOWN = 0,
	CFG_DOOR_OPEN_METHOD_PWD_ONLY,		// 只允许密码开锁
	CFG_DOOR_OPEN_METHOD_CARD,			// 只允许刷卡开锁
	CFG_DOOR_OPEN_METHOD_PWD_OR_CARD,	// 密码或刷卡开锁
	CFG_DOOR_OPEN_METHOD_CARD_FIRST,	// 先刷卡后密码开锁
	CFG_DOOR_OPEN_METHOD_PWD_FIRST,		// 先密码后刷卡开锁
	CFG_DOOR_OPEN_METHOD_SECTION,		// 分时段开门
}CFG_DOOR_OPEN_METHOD;
// 门禁状态
typedef enum CFG_ACCESS_STATE
{
	ACCESS_STATE_NORMAL,                                        // 普通
	ACCESS_STATE_CLOSEALWAYS,                                   // 常关
	ACCESS_STATE_OPENALWAYS,                                    // 常开 
}CFG_ACCESS_STATE;
 

// 门禁模式
typedef enum CFG_ACCESS_MODE
{
	ACCESS_MODE_HANDPROTECTED,                                  // 防夹模式
	ACCESS_MODE_SAFEROOM,                                       // 防护房间模式    
	ACCESS_MODE_OTHER,                                          // 其它
}CFG_ACCESS_MODE;
// 分时段开门
typedef struct tagCFG_DOOROPEN_TIMESECTION_INFO
{
	CFG_TIME_PERIOD			stuTime;				// 时间段
	CFG_DOOR_OPEN_METHOD	emDoorOpenMethod;		// 开门模式
}CFG_DOOROPEN_TIMESECTION_INFO;
// 门禁事件配置
typedef struct tagCFG_ACCESS_EVENT_INFO
{
	char                szChannelName[MAX_NAME_LEN];	// 门禁通道名称
	CFG_ACCESS_STATE    emState;						// 门禁状态
	CFG_ACCESS_MODE     emMode;							// 门禁模式
	int					nEnableMode;					// 门禁使能电平值, 0:低电平有效(断电启动); 1:高电平有效(通电启动);
	BOOL                bSnapshotEnable;				// 事件联动抓图使能
	
    // 能力
	bool                abDoorOpenMethod;
    bool                abUnlockHoldInterval;
	bool                abCloseTimeout;
	bool                abOpenAlwaysTimeIndex;
	bool                abHolidayTimeIndex;
	bool                abBreakInAlarmEnable;
	bool				abRepeatEnterAlarmEnable;
	bool                abDoorNotClosedAlarmEnable;
	bool				abDuressAlarmEnable;
	bool                abDoorTimeSection;
	bool				abSensorEnable;
	BYTE				byReserved;

	CFG_DOOR_OPEN_METHOD	emDoorOpenMethod;			// 开门方式
	int					nUnlockHoldInterval;			// 门锁保持时间(自动关门时间),单位毫秒,[250, 20000]
	int					nCloseTimeout;					// 关门超时时间, 超过阈值未关会触发报警，单位秒,[0,9999];0表示不检测超时
	int					nOpenAlwaysTimeIndex;			// 常开时间段, 值为CFG_ACCESS_TIMESCHEDULE_INFO配置的数组下标
	int					nHolidayTimeRecoNo;				// 假期内时间段, 值为假日记录集的记录编号，对应NET_RECORDSET_HOLIDAY的nRecNo
	BOOL				bBreakInAlarmEnable;			// 闯入报警使能
	BOOL				bRepeatEnterAlarm;				// 反潜报警使能
	BOOL				bDoorNotClosedAlarmEnable;		// 门未关报警使能
	BOOL				bDuressAlarmEnable;				// 胁迫报警使能
	CFG_DOOROPEN_TIMESECTION_INFO	stuDoorTimeSection[WEEK_DAY_NUM][MAX_DOOR_TIME_SECTION];// 分时段开门信息
	BOOL				bSensorEnable;					// 门磁使能
}CFG_ACCESS_EVENT_INFO;
 

// 查询记录能力集能力集
typedef struct tagCFG_CAP_RECORDFINDER_INFO 
{
	int nMaxPageSize; // 最大分页条数 
}CFG_CAP_RECORDFINDER_INFO;
// 解析查询到的配置信息
CLIENT_API BOOL  CALL_METHOD CLIENT_ParseData(char* szCommand, char* szInBuffer, LPVOID lpOutBuffer, DWORD dwOutBufferSize, void* pReserved);
// 组成要设置的配置信息
CLIENT_API BOOL  CALL_METHOD CLIENT_PacketData(char* szCommand, LPVOID lpInBuffer, DWORD dwInBufferSize, char* szOutBuffer, DWORD dwOutBufferSize);