Projects/ControllerSDK/ChilnaSKDDriver/SDK/SDKImport.cs

using System;
using System.Runtime.InteropServices;

namespace ControllerSDK.SDK
{
	public class SDKImport
	{
		//[UnmanagedFunctionPointer(CallingConvention.StdCall)]
		public delegate void fDisConnectDelegate(Int32 lLoginID, string pchDVRIP, Int32 nDVRPort, UInt32 dwUser);

		[DllImport(@"dhnetsdk.dll")]
		public static extern Boolean CLIENT_Init(fDisConnectDelegate cbDisConnect, UInt32 dwUser);

		[StructLayout(LayoutKind.Sequential)]
		public struct NET_DEVICEINFO
		{
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 48)]
			public Byte[] sSerialNumber;
			public Byte byAlarmInPortNum;
			public Byte byAlarmOutPortNum;
			public Byte byDiskNum;
			public Byte byDVRType;
			public Byte byChanNum;
		}

		[DllImport(@"dhnetsdk.dll")]
		public static extern Int32 CLIENT_Login(String pchDVRIP, UInt16 wDVRPort, String pchUserName, String pchPassword, out NET_DEVICEINFO lpDeviceInfo, out Int32 error);

		[DllImport(@"dhnetsdk.dll")]
		public static extern bool CLIENT_Cleanup();


		[StructLayout(LayoutKind.Sequential)]
		public struct DHDEV_VERSION_INFO
		{
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 48)]
			Char[] szDevSerialNo;
			Char byDevType;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			Char[] szDevType;
			int nProtocalVer;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			Char[] szSoftWareVersion;
			UInt16 dwSoftwareBuildDate;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			Char[] szPeripheralSoftwareVersion;
			UInt16 dwPeripheralSoftwareBuildDate;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			Char[] szGeographySoftwareVersion;
			UInt16 dwGeographySoftwareBuildDate;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			Char[] szHardwareVersion;
			UInt16 dwHardwareDate;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			Char[] szWebVersion;
			UInt16 dwWebBuildDate;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 256)]
			Char[] reserved;
		}

		[DllImport(@"dhnetsdk.dll")]
		public static extern bool CLIENT_QueryDevState(Int32 lLoginID, Int32 nType, IntPtr pBuf, Int32 nBufLen, out Int32 pRetLen, Int32 waittime);

		[DllImport(@"dhnetsdk.dll")]
		public static extern bool CLIENT_GetNewDevConfig(Int32 lLoginID, string szCommand, Int32 nChannelID, char[] szOutBuffer, UInt32 dwOutBufferSize, out Int32 error, Int32 waittime);

		[StructLayout(LayoutKind.Sequential)]
		public struct CFG_NETWORK_INTERFACE
		{
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			Char[] szName;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			Char[] szIP;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			Char[] szSubnetMask;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			Char[] szDefGateway;
			bool bDhcpEnable;
			bool bDnsAutoGet;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 2 * 256)]
			Char[] szDnsServers;
			Int32 nMTU;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct CFG_NETWORK_INFO
		{
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			Char[] szHostName;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			Char[] szDomain;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
			Char[] szDefInterface;
			int nInterfaceNum;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			CFG_NETWORK_INTERFACE[] stuInterfaces;
		}

		[DllImport(@"dhconfigsdk.dll")]
		public static extern bool CLIENT_ParseData(string szCommand, char[] szInBuffer, IntPtr lpOutBuffer, Int32 dwOutBufferSize, IntPtr pReserved);

		[DllImport(@"dhconfigsdk.dll")]
		public static extern bool CLIENT_PacketData(string szCommand, IntPtr lpInBuffer, Int32 dwInBufferSize, char[] szOutBuffer, Int32 dwOutBufferSize);

		[DllImport(@"dhnetsdk.dll")]
		public static extern bool CLIENT_SetNewDevConfig(Int32 lLoginID, string szCommand, Int32 nChannelID, char[] szInBuffer, Int32 dwInBufferSize, out Int32 error, out Int32 restart, Int32 waittime);

		[StructLayout(LayoutKind.Sequential)]
		public struct DHDEV_NETINTERFACE_INFO
		{
			Int32 dwSize;
			bool bValid;
			bool bVirtual;
			Int32 nSpeed;
			Int32 nDHCPState;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 260)]
			Char[] szName;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 260)]
			Char[] szType;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 40)]
			Char[] szMAC;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 36)]
			Char[] szSSID;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 260)]
			Char[] szConnStatus;
			Int32 nSupportedModeNum;
			//[MarshalAs(UnmanagedType.ByValArray, SizeConst = 64 * 64)]
			//Char[][] szSupportedModes;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 64 * 64)]
			Char[] szSupportedModes;
		}

		[DllImport(@"dhnetsdk.dll")]
		public static extern bool CLIENT_QueryDevState(Int32 lLoginID, Int32 nType, char[] pBuf, Int32 nBufLen, out Int32 pRetLen, Int32 waittime);

		[DllImport(@"dhnetsdk.dll")]
		public static extern bool CLIENT_QueryNewSystemInfo(Int32 lLoginID, String szCommand, Int32 nChannelID, char[] szOutBuffer, Int32 dwOutBufferSize, out Int32 error, Int32 waittime);

		[StructLayout(LayoutKind.Sequential)]
		public struct CFG_CAP_RECORDFINDER_INFO
		{
			Int32 nMaxPageSize;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct NET_TIME
		{
			public Int32 dwYear;
			public Int32 dwMonth;
			public Int32 dwDay;
			public Int32 dwHour;
			public Int32 dwMinute;
			public Int32 dwSecond;
		}

		[DllImport(@"dhnetsdk.dll")]
		public static extern bool CLIENT_QueryDeviceTime(Int32 lLoginID, IntPtr pDeviceTime, Int32 waittime);

		[DllImport(@"dhnetsdk.dll")]
		public static extern bool CLIENT_SetupDeviceTime(Int32 lLoginID, IntPtr pDeviceTime);

		public enum DH_LOG_QUERY_TYPE
		{
			DHLOG_ALL = 0,
			DHLOG_SYSTEM,
			DHLOG_CONFIG,
			DHLOG_STORAGE,
			DHLOG_ALARM,
			DHLOG_RECORD,
			DHLOG_ACCOUNT,
			DHLOG_CLEAR,
			DHLOG_PLAYBACK,
			DHLOG_MANAGER
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct QUERY_DEVICE_LOG_PARAM
		{
			public DH_LOG_QUERY_TYPE emLogType;
			public NET_TIME stuStartTime;
			public NET_TIME stuEndTime;
			public Int32 nStartNum;
			public Int32 nEndNum;
			public Byte nLogStuType;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
			public Byte[] reserved;
			public UInt32 nChannelID;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 40)]
			public Byte[] bReserved;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct DHDEVTIME
		{
			public Int32 second;
			public Int32 minute;
			public Int32 hour;
			public Int32 day;
			public Int32 month;
			public Int32 year;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct DH_LOG_ITEM
		{
			DHDEVTIME time;
			UInt16 type;
			char reserved;
			char data;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 8)]
			char[] context;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct stuOldLog
		{
			DH_LOG_ITEM stuLog;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 48)]
			Byte[] bReserved;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct MyUnion
		{
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 64)]
			Char[] szLogContext;
			stuOldLog stuOldLog;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct DH_DEVICE_LOG_ITEM_EX
		{
			Int32 nLogType;
			DHDEVTIME stuOperateTime;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 16)]
			Char[] szOperator;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)]
			Byte[] bReserved;
			Byte bUnionType;
			MyUnion myUnion;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			Char[] szOperation;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 4 * 1024)]
			Char[] szDetailContext;
		}

		[DllImport(@"dhnetsdk.dll")]
		public static extern bool CLIENT_QueryDeviceLog(Int32 lLoginID, IntPtr pQueryParam, IntPtr pLogBuffer, Int32 nLogBufferLen, out Int32 pRecLogNum, Int32 waittime);

		public enum CFG_ACCESS_STATE
		{
			ACCESS_STATE_NORMAL,
			ACCESS_STATE_CLOSEALWAYS,
			ACCESS_STATE_OPENALWAYS,
		}

		public enum CFG_ACCESS_MODE
		{
			ACCESS_MODE_HANDPROTECTED,
			ACCESS_MODE_SAFEROOM,
			ACCESS_MODE_OTHER,
		}

		public enum CFG_DOOR_OPEN_METHOD
		{
			CFG_DOOR_OPEN_METHOD_UNKNOWN = 0,
			CFG_DOOR_OPEN_METHOD_PWD_ONLY,
			CFG_DOOR_OPEN_METHOD_CARD,
			CFG_DOOR_OPEN_METHOD_PWD_OR_CARD,
			CFG_DOOR_OPEN_METHOD_CARD_FIRST,
			CFG_DOOR_OPEN_METHOD_PWD_FIRST,
			CFG_DOOR_OPEN_METHOD_SECTION,
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct CFG_TIME
		{
			public Int32 dwHour;
			public Int32 dwMinute;
			public Int32 dwSecond;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct CFG_TIME_PERIOD
		{
			public CFG_TIME stuStartTime;
			public CFG_TIME stuEndTime;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct CFG_DOOROPEN_TIMESECTION_INFO
		{
			public CFG_TIME_PERIOD stuTime;
			public CFG_DOOR_OPEN_METHOD emDoorOpenMethod;
		}

		//[StructLayout(LayoutKind.Sequential)]
		//public struct CFG_ACCESS_EVENT_INFO
		//{
		//    [MarshalAs(UnmanagedType.ByValArray, SizeConst = 128)]
		//    Char[] szChannelName;
		//    CFG_ACCESS_STATE emState;
		//    CFG_ACCESS_MODE emMode;
		//    Int32 nEnableMode;
		//    bool bSnapshotEnable;
		//    bool abDoorOpenMethod;
		//    bool abUnlockHoldInterval;
		//    bool abCloseTimeout;
		//    bool abOpenAlwaysTimeIndex;
		//    bool abHolidayTimeIndex;
		//    bool abBreakInAlarmEnable;
		//    bool abRepeatEnterAlarmEnable;
		//    bool abDoorNotClosedAlarmEnable;
		//    bool abDuressAlarmEnable;
		//    bool abDoorTimeSection;
		//    bool abSensorEnable;
		//    Byte byReserved;
		//    CFG_DOOR_OPEN_METHOD emDoorOpenMethod;
		//    Int32 nUnlockHoldInterval;
		//    Int32 nCloseTimeout;
		//    Int32 nOpenAlwaysTimeIndex;
		//    Int32 nHolidayTimeRecoNo;
		//    bool bBreakInAlarmEnable;
		//    bool bRepeatEnterAlarm;
		//    bool bDoorNotClosedAlarmEnable;
		//    bool bDuressAlarmEnable;
		//    [MarshalAs(UnmanagedType.ByValArray, SizeConst = 7 * 4)]
		//    CFG_DOOROPEN_TIMESECTION_INFO[][] stuDoorTimeSection;
		//    bool bSensorEnable;
		//}		

		/////////////////////////////////////////////////////////////////////
		//////////////////////    ControllerSDK methods  ////////////////////
		/////////////////////////////////////////////////////////////////////

		public enum EM_NET_RECORD_TYPE
		{
			NET_RECORD_UNKNOWN,
			NET_RECORD_TRAFFICREDLIST,
			NET_RECORD_TRAFFICBLACKLIST,
			NET_RECORD_BURN_CASE,
			NET_RECORD_ACCESSCTLCARD,
			NET_RECORD_ACCESSCTLPWD,
			NET_RECORD_ACCESSCTLCARDREC,
			NET_RECORD_ACCESSCTLHOLIDAY,
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct NET_CTRL_RECORDSET_INSERT_IN
		{
			public Int32 dwSize;
			public EM_NET_RECORD_TYPE emType;
			public IntPtr pBuf;
			public Int32 nBufLen;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct NET_CTRL_RECORDSET_INSERT_OUT
		{
			public Int32 dwSize;
			public Int32 nRecNo;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct NET_CTRL_RECORDSET_INSERT_PARAM
		{
			public Int32 dwSize;
			public NET_CTRL_RECORDSET_INSERT_IN stuCtrlRecordSetInfo;
			public NET_CTRL_RECORDSET_INSERT_OUT stuCtrlRecordSetResult;
		}
